# rulemaster

./: .gitignore  README.md  config.ini.example  createChunks.py  createEmbeddings.py  createIndex.py  interface.py  pyproject.toml
misc/: createConf.py  example.ini  testconf.py
raw/: fl_data.json
